antsurance/force-app/main/default/objects/Account/fields/Active_Policies__c.field-meta.xml
<CustomField>
    <fullName>Active_Policies__c</fullName>
    <description>Number of policies in force for this customer.</description>
    <label>Policies</label>
    <summaryFilterItems>
        <field>Policy__c.Status__c</field>
        <operation>equals</operation>
        <value>Active, Pending Renewal</value>
    </summaryFilterItems>
    <summaryForeignKey>Policy__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>