antsurance/force-app/main/default/objects/Account/fields/Customer_Brief__c.field-meta.xml
<CustomField>
    <fullName>Customer_Brief__c</fullName>
    <description>A short standing brief on the customer: who they are, how they like to be served and what to watch. Markdown is rendered on the record page.</description>
    <label>Customer Brief</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>