antsurance/force-app/main/default/objects/Account/fields/Customer_Segment__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment__c</fullName>
    <description>Which side of the business this customer belongs to.</description>
    <label>Customer Segment</label>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal Lines</fullName>
            </value>
            <value>
                <fullName>Commercial Lines</fullName>
            </value>
            <value>
                <fullName>Agency Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>