antsurance/force-app/main/default/objects/Account/fields/Customer_Since__c.field-meta.xml
<CustomField>
    <fullName>Customer_Since__c</fullName>
    <description>When this customer first bought a policy from Antsurance.</description>
    <label>Customer Since</label>
    <type>Date</type>
</CustomField>