antsurance/force-app/main/default/objects/Account/fields/Premium_in_Force__c.field-meta.xml
<CustomField>
    <fullName>Premium_in_Force__c</fullName>
    <description>Total annual premium across policies in force.</description>
    <label>Premium in Force</label>
    <summarizedField>Policy__c.Annual_Premium__c</summarizedField>
    <summaryFilterItems>
        <field>Policy__c.Status__c</field>
        <operation>equals</operation>
        <value>Active, Pending Renewal</value>
    </summaryFilterItems>
    <summaryForeignKey>Policy__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>