antsurance/force-app/main/default/objects/Account/recordTypes/Agency.recordType-meta.xml
<RecordType>
    <fullName>Agency</fullName>
    <active>true</active>
    <description>An independent agency or broker that places business with Antsurance.</description>
    <label>Agency</label>
</RecordType>