antsurance/force-app/main/default/objects/Account/recordTypes/Household.recordType-meta.xml
<RecordType>
    <fullName>Household</fullName>
    <active>true</active>
    <description>A family or individual who holds personal lines policies. Its contacts are the household members.</description>
    <label>Household</label>
</RecordType>