antsurance/force-app/main/default/objects/Account/listViews/Agencies.listView-meta.xml
<ListView>
    <fullName>Agencies</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Agency</value>
    </filters>
    <label>Agencies</label>
</ListView>