antsurance/force-app/main/default/objects/Account/listViews/Business_Customers.listView-meta.xml
<ListView>
    <fullName>Business_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Active_Policies__c</columns>
    <columns>Premium_in_Force__c</columns>
    <columns>Customer_Since__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Business</value>
    </filters>
    <label>Businesses</label>
</ListView>